--- a/job.yaml
+++ b/job.yaml
@@ -19,11 +19,11 @@ spec:
           env:
             - name: JAVA_TOOL_OPTIONS
 #              DOESN'T WORK - Java OutOfMemoryError. Workload is the size of heap. any other object kills
-#              value: '-XX:+UseContainerSupport -XX:InitialRAMPercentage=10.0 -XX:MaxRAMPercentage=70.0'
+#              value: '-XX:InitialRAMPercentage=10.0 -XX:MaxRAMPercentage=70.0'
 #              DOESN'T WORK - K8s 137 OOMKill. Kubernetes kills the pod. Heap + non-heap exceed the memory limit
-#              value: '-XX:+UseContainerSupport -XX:InitialRAMPercentage=10.0 -XX:MaxRAMPercentage=90.0'
+#              value: '-XX:InitialRAMPercentage=10.0 -XX:MaxRAMPercentage=90.0'
 #              WORKS - workload fits in the heap and leaves enough space for non heap
-              value: '-XX:+UseContainerSupport -XX:InitialRAMPercentage=10.0 -XX:MaxRAMPercentage=80.0'
+              value: '-XX:InitialRAMPercentage=10.0 -XX:MaxRAMPercentage=80.0'
             - name: HEAP_TO_FILL
               value: '350'
       restartPolicy: Never
